--- a/templates/sts.desktop.erb
+++ b/templates/sts.desktop.erb
@@ -3,7 +3,7 @@ Type=Application
 Name=Spring Tool Suite
 Comment=Spring Tool Suite
 Icon=<%= @sts_home %>/icon.xpm
-Exec= <%= @sts_home %>/STS
+Exec= <%= @sts_executable %>
 Terminal=false
 StartupNotify=true
 Categories=Development;IDE;STS;Entwicklung;
